<resources>
    <string name="app_name">InstaMedia</string>
    <string name="title_activity_main">Insta Media</string>
    <string name="action_quit">Quit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="background_service">Background Service</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="background_service_msg">You can download media directly from Instagram after copy shared URL</string>
    <string name="img_url_prefix">https://api.instagram.com/oembed/?url=</string>
    <string name="download">DOWNLOAD</string>
    <string name="dismiss">DISMISS</string>
    <string name="json_failed">FAILED STRING TO JSON</string>
    <string name="insta_notreachable">Sorry , Can\'t Connect to Instagram</string>

    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="service_stop">InstaMedia service has been stopped. You can turn it on from app setting tab.</string>
    <string name="retry">RETRY</string>
    <string name="please_wait">Please Wait …</string>
    <string name="click_to_signout">Click to Sign Out</string>
    <string name="click_to_signin">Click to Sign In</string>
    <string name="clear_all_media_from_my_account">CLEAR ALL MEDIA FROM MY ACCOUNT</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_cnf_msg">Are you sure you want to sign out from Google account ?</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_cnf_msg">All media linked to your account will be wiped. However downloaded media on internal storage will remain. Do you want to continue ?</string>
    <string name="deleting_data">Deleting Data …</string>
    <string name="data_delete_success">All data deleted successfully</string>
    <string name="error_something_wrong">Error : Something wrong. Try Again</string>
    <string name="click_to_email">Click to send an E-Mail</string>
    <string name="open_instagram">OPEN  INSTAGRAM</string>
    <string name="open_imstamedia">Open InstaMedia</string>
    <string name="confirm">Confirmation</string>
    <string name="delete">Delete</string>
    <string name="delete_media_confirm_msg">Are you sure you want to delete this Media ?</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="download_failed">Download Failed !</string>
    <string name="share_failed">Share Failed !</string>
    <string name="downloading">Downloading …</string>
    <string name="download_successful">Downloaded Successful !</string>
    <string name="media">Media</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="video_already_download">Video already Downloaded. Do you want to download it again ?</string>
    <string name="image_already_download">Image already Downloaded</string>
    <string name="how_to_use">How to use InstaMedia ?</string>
    <string name="follow_me">Follow Me  @imshubhpatel</string>


    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--<string name="native_ad_unit_id">ca-app-pub-3940256099942544/2177258514</string>-->

    <string name="admob_app_id">ca-app-pub-3746797233831787~9931096157</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3746797233831787/9636071359</string>
    <string name="native_ad_unit_id">ca-app-pub-3746797233831787/8159338156</string>


    <string name="signin_later">Continue without Sign In</string>
    <string name="user_linked_msg">User Linked</string>
    <string name="user_linked_cont_msg">Google account on this device has been already linked to InstaMedia. Please signout and signin again with Google Account.\nYour current media will be lost.</string>
    <string name="intro_0_msg">You can save your favourite Instagram Photos,Videos and DP using InstaMedia. Let\'s Start !</string>
    <string name="intro_step_1">Step 1 : Open Instagram</string>
    <string name="intro_step_2">Step 2 : Copy URL</string>
    <string name="intro_step_3">Step 3 : Open InstaMedia</string>
    <string name="intro_1_msg">Go to Instagram Scroll to Photo or Video you want, and click on 3 Dots menu</string>
    <string name="intro_2_msg">Click on \"Copy Share URL\" under 3 dots on top right corner</string>
    <string name="intro_3_msg">Now open this app. Yaah, Its that simple.</string>
    <string name="share">Share</string>
    <string name="show_notification">Show Notification</string>
    <string name="show_notification_msg">Show ongoing notification while service is on (We Recommand you to keep it on for better performance)</string>
    <string name="intro_step_4">New Feature !</string>
    <string name="intro_4_msg">Save multipal photos and videos without opening IMedia. Just copy links and we\'ll do the rest for you.</string>
    <string name="share_app">Share this App</string>
    <string name="download_share_media_confirm_msg">Do you want to download video ? You can also share download link as text.</string>
    <string name="share_link">Share Link</string>
    <string name="intro_step_5">Download DP</string>
    <string name="intro_5_msg">Now you can also download Profile Pictures (DP).</string>

</resources>
