<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">
<LinearLayout
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/background_service"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/Text_Mid" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/background_service_msg"
                        android:textSize="@dimen/Text_Small" />


                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_service"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:clickable="true"
                    android:textSize="@dimen/Text_Large" />
        </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_notification"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/Text_Mid" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_notification_msg"
                        android:textSize="@dimen/Text_Small" />


                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:clickable="true"
                    android:textSize="@dimen/Text_Large" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:clickable="true"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/Text_Mid" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="username@gmail.com"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/Text_Small" />

                <TextView
                    android:id="@+id/userInst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_signin"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/Text_Small"
                    android:textStyle="italic|bold" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_openInsta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"

        android:text="@string/open_instagram"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/how_to_use"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_clearAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/clear_all_media_from_my_account"
        android:textColor="@android:color/white" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

</LinearLayout>
</android.support.v4.widget.NestedScrollView>
