<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_settings"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"

    android:contextClickable="true">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        android:id="@+id/card_shubh"
        android:clickable="true"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/shubh_dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="SHUBH PATEL"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/Text_Mid" />

                <TextView
                    android:textSize="@dimen/Text_Small"
                    android:text="pshubh96@yahoo.com"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/click_to_email"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic|bold"
                    android:textSize="@dimen/Text_Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        android:id="@+id/card_sid"
        android:visibility="gone"
        android:clickable="true"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sid_dp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="SIDDHARTH NAYAK"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/Text_Mid" />

                <TextView
                    android:textSize="@dimen/Text_Small"
                    android:text="siddh.nayak@gmail.com "
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/click_to_email"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic|bold"
                    android:textSize="@dimen/Text_Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:textAllCaps="false"
        android:text="@string/share_app"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_followme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:text="@string/follow_me"
        android:textColor="@android:color/white" />
    
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

</LinearLayout>
    </androidx.core.widget.NestedScrollView>